--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ asgiref==3.5.2
 certifi==2022.5.18.1
 charset-normalizer==2.0.12
 Django==4.0.4
+gunicorn==20.1.0
 idna==3.3
+python-dotenv==1.0.0
 requests==2.27.1
 sqlparse==0.4.2
 typish==1.9.3
